# RoboDriver

./: .gitmodules  README.md  README_ja.md  pyproject.toml
components/arms/dora-arm-piper/: .gitignore  pyproject.toml
components/arms/dora-arm-piper/dora_arm_piper/: main.py
components/arms/dora-arm-piper/examples/: read_bimanual_arm.yml  view_bimanual_arm.yml
components/arms/dora-arm-so101/: pyproject.toml
components/cameras/dora-camera-realsense/: pyproject.toml
components/simulations/dora-sim-genesis-franka-grasp-cube/: pyproject.toml
operating_platform/components/Xsens_Metagloves/: teleop.py
operating_platform/components/arm_normal_realman_v2/: main.py
operating_platform/components/camera_rgbd_orbbec_v1/: main.py
operating_platform/components/camera_rgbd_realsense/: main.py
operating_platform/components/camera_rgbd_zed/: main.py
operating_platform/core/: coordinator.py  daemon.py  recorder.py
operating_platform/dataset/: dorobot_dataset.py  functions.py
operating_platform/dataset/visual/: visual_dataset.py  visualize_dataset_html.py
operating_platform/robot/: daemon.py
operating_platform/robot/robots/: configs.py  utils.py
operating_platform/robot/robots/agibot_a2d/: test.py  (+2 more)
operating_platform/robot/robots/galbot_g1/: config.py  ctrl_robot.py  ctrl_robot_bc.py  ctrl_robot_bc2.py  manipulator.py  manipulator_old.py  pyproject.toml  test_async.py  test_ctrl.py  test_ctrl_joint.py  test_ctrl_new.py  test_get_data.py  test_get_joint.py  test_sync.py
operating_platform/robots/so101_follower_dora/: README.md
operating_platform/scripts/: run.py
operating_platform/server/baai/: setup.yaml
operating_platform/utils/: colored_logging.py
robodriver/: __init__.py  __version__.py
robodriver/core/: coordinator.py  simulator.py
robodriver/robots/: utils.py
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/: README.md  pyproject.toml
robodriver/robots/robodriver-robot-franka-aio-dora/: README.md  pyproject.toml
robodriver/robots/robodriver-robot-franka-aio-dora/dora/: dataflow.yml
robodriver/robots/robodriver-robot-franka-aio-dora/lerobot_robot_franka_aio_dora/: __init__.py
robodriver/robots/robodriver-robot-franka-aio-dora/robodriver_robot_franka_aio_dora/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/robots/robodriver-robot-galaxealite-aio-ros2/: README-EN.md  README.md
robodriver/robots/robodriver-robot-galaxealite-follower-ros1/: .gitignore  README.md  pyproject.toml
robodriver/robots/robodriver-robot-realman1-aio-dora/: .gitmodules  README.md  pyproject.toml
robodriver/robots/robodriver-robot-realman1-aio-dora/dora/: dataflow.yml
robodriver/robots/robodriver-robot-realman1-aio-dora/lerobot_robot_realman1_aio_dora/: __init__.py
robodriver/robots/robodriver-robot-realman1-aio-dora/robodriver_robot_realman1_aio_dora/: __init__.py  config.py  node.py  robot.py  status.py
robodriver/robots/robodriver-robot-so101-aio-dora/: pyproject.toml
robodriver/robots/robodriver-robot-so101-follower-dora/: pyproject.toml
robodriver/scripts/: run.py
robodriver/simulations/robodriver-sim-genesis-franka-aio-dora/: README.md  pyproject.toml
robodriver/simulations/robodriver-sim-genesis-franka-aio-dora/dora/: dataflow.yml
robodriver/simulations/robodriver-sim-genesis-franka-aio-dora/lerobot_sim_genesis_franka_aio_dora/: __init__.py
robodriver/simulations/robodriver-sim-genesis-franka-aio-dora/robodriver_sim_genesis_franka_aio_dora/: __init__.py  config.py  node.py  sim.py
robodriver/teleoperators/: utils.py
robodriver/teleoperators/robodriver-teleoperator-so101-leader-dora/: pyproject.toml
robodriver/teleoperators/robodriver-teleoperator-so101-leader-dora/dora/: dataflow.yml
robodriver/teleoperators/robodriver-teleoperator-so101-leader-dora/lerobot_teleoperator_so101_leader_dora/: __init__.py
robodriver/teleoperators/robodriver-teleoperator-so101-leader-dora/robodriver_teleoperator_so101_leader_dora/: __init__.py  config.py  node.py  status.py  teleoperator.py
robodriver/tools/AutoDriver/: README.md  README.zh-CN.md
robodriver/utils/: import_utils.py
scripts/: record.sh  record_with_sim.sh
test/genesis/: ik_keybord_ctrl.py
test/logger/: colored_logging.py  test.py  test_log.py
test/piper/: pyproject.toml
(+59 files in other folders)
