[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_franka_aio_dora"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9,<3.13"  
license = {text = "Apache-2.0"}
authors = [
    {name = "Runtian Xu", email = "xuruntian03@163.com"},
]
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "draccus>=0.9.3",
    "logging_mp",
    "pyrealsense2",   
    "scipy",       
]

[tool.setuptools.packages.find]
include = [
    "robodriver_robot_franka_aio_dora",
    "lerobot_robot_franka_aio_dora"
]
