[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_realman1_aio_dora"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Runtian Xu", email = "xuruntian03@163.com"},
]
keywords = ["robotics", "lerobot", "realman"]
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "draccus>=0.9.3",
    "logging_mp",
]
[project.optional-dependencies]
hardware = [
    "pyrealsense2",          
    "numpy>=1.26.0,<1.27.0", 
    "opencv-python>=4.8.0,<4.9.0",
    "Robotic_Arm==1.0.4.1"
]
[tool.setuptools.packages.find]
include = [
    "robodriver_robot_realman1_aio_dora",
    "lerobot_robot_realman1_aio_dora"
]
