[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_teleoperator_so101_leader_dora"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Xiang Yang", email = "yangxiang@baai.ac.cn"},
]
keywords = ["robotics", "lerobot", "so101"]
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "logging_mp"
]

[tool.setuptools.packages.find]
include = [
    "robodriver_teleoperator_so101_leader_dora",
    "lerobot_teleoperator_so101_leader_dora",
]
